05-sidecar/sidecar.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-sidecar
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: hello-world-sidecar.192-168-64-3.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: hello-world-sidecar
            port: 
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-sidecar
  labels:
    run: hello-world-sidecar
spec:
  selector:
    app: hello-world-sidecar
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-sidecar
  labels:
    app: hello-world-sidecar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-sidecar
  template:
    metadata:
      labels:
        app: hello-world-sidecar
    spec:
      containers:
      - name: app
        image: "registry-192-168-64-3.nip.io/go-hello-world:latest"
      - name: sidecar
        image: "registry-192-168-64-3.nip.io/go-hello-world-sidecar:latest"
